# pwr

./: .gitignore
bachelor/semester-6/gamedev/: .gitignore  index.html
masters/semester-1/distributed-algs/: client  client.cpp  server  server.cpp
masters/semester-2/data-mining/: Exercise 10.ipynb  lab3.ipynb
masters/semester-3/big-data/: .gitignore
semester-1/programming/yahtzee-game/: README.md
semester-2/operating-systems/process-scheduling-algorithms/: README.md
semester-3/paradigms/labs/: lab1.scala  lab2.ml  lab3.ml  lab3.scala  lab4.ml  lab4.scala  lab5.ml  lab5.scala  lab6.java  lab6.ml  lab7.ml
semester-3/tep/: .gitignore  Main.java
semester-3/tep/lab1/: main.cpp  task1.cpp  task3.cpp  task_1.cpp  task_2.cpp
semester-3/tep/lab10-edit/: CMakeLists.txt  constants.h  main.cpp  matrixhelper.h  mscnproblem.cpp  mscnproblem.h  random.h  randomsearch.cpp  randomsearch.h  tablehelper.h
semester-3/tep/lab11/: CMakeLists.txt  CMakeLists.txt.user.9eb7286  constants.h  diffevol.cpp  diffevol.h  diffhelper.h  diffindividual.h  main.cpp  modrandomsearch.cpp  modrandomsearch.h  mscnproblem.h  mysmartpointer.h  random.cpp  randomsearch.cpp  randomsearch.h
semester-3/tep/lab12/: CMakeLists.txt  constants.h  diffevol.cpp  diffevol.h  diffindividual.cpp  main.cpp  matrix.h  (+9 more)
semester-3/tep/lab9-edit/: CMakeLists.txt  constants.h  main.cpp  matrixhelper.h  mscnproblem.cpp  tablehelper.h
semester-3/tep/lab9-edit/problem_files/: problem1.txt
semester-4/linux/: file  lazy_dog.txt  test
semester-5/scripting-langs/: test
semester-7/metaheurystyki/: .gitignore
(+1134 files in other folders)
